--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,17 @@ Seismic Data Acquisition Website */
 
 /* GENERAL STYLES */
 
+/* BODY */
+#body-content {
+    margin-top: 75px;
+}
+
 
 /* HEADER */
+
+#header {
+    
+}
 
 #company-logo {
     background-color: aqua;
@@ -49,7 +58,11 @@ Seismic Data Acquisition Website */
     background-color: rgb(0, 255, 55);
     height: 50%;
     margin: 0;
+}
 
+a.nav-link {
+    padding-top: 10px;
+    margin: auto;
 }
 
 #footer-contact-link {
@@ -60,8 +73,8 @@ Seismic Data Acquisition Website */
 }
 
 #company-links > nav {
-
     margin: auto;
+    font-size: 250%;
 }
 
 #footer {
@@ -69,22 +82,6 @@ Seismic Data Acquisition Website */
 }
 
 
-
-
-/*
-body > footer > nav {
-    padding-top: 5px;
-    font-size: 200%;
-}
-
-body > footer > nav > a > i {
-    color: white;
-}
-*/
-
-
-
-a.nav-link {
-    padding: auto;
-    margin: auto;
-}
+.navbar-toggler.toggler-example {
+    cursor: pointer;
+    }
