--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,18 +107,21 @@ https://stackoverflow.com/questions/10636667/bootstrap-modal-appearing-under-bac
 /* FOOTER */
 
 #footer {
-    background-color: aqua;
+    background-color: rgb(49, 49, 48);
 }
 
 #company-data {
-    background-color: rgb(55, 0, 255);
+    padding: 25px;
+    /*background-color: rgb(55, 0, 255);*/
     font-family: 'Heebo', sans-serif;
+    color: white;
 }
 
 #company-links {
-    background-color: rgb(0, 255, 55);
+    /*background-color: rgb(0, 255, 55);*/
     height: 50%;
     margin: 0;
+    
 }
 
 a.nav-link {
@@ -127,16 +130,26 @@ a.nav-link {
 }
 
 #footer-contact-link {
-    background-color: rgb(255, 0, 212);
+    /*background-color: rgb(255, 0, 212);*/
     height: 50%;
     margin: auto;
     text-align: center;
     font-family: 'Heebo', sans-serif;
 }
 
+#footer-contact-link > a {
+    padding-top: 25px;
+    color: white;
+}
+
 #company-links > nav {
     margin: auto;
     font-size: 250%;
+}
+
+#company-links > nav > a {
+    padding-top: 25px;
+    color: white;
 }
 
 #company-data > p {
@@ -184,6 +197,20 @@ a.nav-link {
 
     #log-in-button > button {
         padding:7px 4px 7px;
+    }
+
+    #company-links > nav > a {
+        padding-top: 0;
+        padding-bottom: 10px;
+    }
+
+    #footer-contact-link > a {
+        padding-top: 10px;
+        padding-bottom: 20px;
+    }
+
+    #company-data > p {
+        text-align: center;
     }
 
 }
