--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,7 +198,7 @@ a.nav-link {
     /*background-color: blueviolet;   */
 
     padding: 0;
-    margin: 0;
+    margin-top: 58px;
     height: 100%;
     width: 100%;
       
@@ -207,9 +207,10 @@ a.nav-link {
 
 #weather-data {
     padding: 0;
-    margin: 0;
+    margin-top: 58px;
     background-color: blue;
     height: 100%;
+    width: 100%;
     
     
 }
