--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,7 @@ https://stackoverflow.com/questions/10636667/bootstrap-modal-appearing-under-bac
 /* FOOTER */
 
 #footer {
+
     background-color: rgb(49, 49, 48);
 }
 
@@ -187,36 +188,40 @@ a.nav-link {
 /* WEATHER PAGE */
 /* ************ */
 
-#body-content-weather {
-
+#top-container {
+    margin-top: 70px;
+    margin-bottom: 12px;
+    
+    
 }
 
 #weather-map-and-data {
-    height: 500px;
+    
 }
 
 #viewDiv {
+    height: 350px;
+    background-color: aqua;
     /*background-color: blueviolet;   */
-
-    padding: 0;
-    margin-top: 58px;
-    height: 100%;
-    width: 100%;
+    /*position: relative;*/
+    /*height: 100%;
+    width: 100%;*/
+    padding: 0 20px;
       
     
 }
 
 #weather-data {
-    padding: 0;
-    margin-top: 58px;
+    
     background-color: blue;
-    height: 100%;
-    width: 100%;    
+    /*height: 100%;
+    width: 100%; */   
 }
 
 #weather-data-title {
     background-color: aqua;
 }
+
 #latitute {
     background-color: rgb(44, 107, 107);
 }
@@ -239,12 +244,27 @@ a.nav-link {
     background-color: rgb(141, 161, 26);
 }
 
+#weather-extra-info {
+    background-color: royalblue;
+    height: 250px;
+}
 
 
 
 /* ************* */
 /* MEDIA QUERIES */
 /* ************* */
+
+
+/* SCREEN SIZE BELOW 1200px */
+
+@media screen and (max-width: 1200px) {
+
+
+
+}
+
+
 
 
 /* SCREEN SIZE BELOW 992px */
@@ -255,10 +275,18 @@ a.nav-link {
 
 }
 
+/* SCREEN SIZE BELOW 992px */
+
+@media screen and (max-width: 768px) {
+
+
+
+}
+
 
 /* SCREEN SIZE BELOW 575px */
 
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 576px) {
 
     #log-in-button > button {
         margin-right: 0px;
@@ -269,7 +297,7 @@ a.nav-link {
     }
 
     #header-menu > nav {        
-        float: right;        
+        float: right;     
     }
 
     #header-menu > nav > button.navbar-toggler {        
