--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,6 +288,15 @@ a.nav-link {
 
 @media screen and (max-width: 576px) {
 
+    #company-logo {
+        float: right;
+    }
+
+    a.navbar-brand {
+        padding-left: 10%;
+    }
+    
+
     #log-in-button > button {
         margin-right: 0px;
         margin-top: 8px;
