--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@ Seismic Data Acquisition Website */
 
 /* GENERAL STYLES */
 
+p {
+    font-family: 'Oxygen', sans-serif;
+}
+
 .active {
     text-decoration: underline;
 }
@@ -124,10 +128,14 @@ https://stackoverflow.com/questions/10636667/bootstrap-modal-appearing-under-bac
 
 #company-data {
     padding: 25px;
-    /*background-color: rgb(55, 0, 255);*/
-    font-family: 'Heebo', sans-serif;
+    /*background-color: rgb(55, 0, 255);*/    
     color: white;
 }
+
+#company-data > p {
+    font-family: 'Heebo', sans-serif;
+}
+
 
 #company-links {
     /*background-color: rgb(0, 255, 55);*/
@@ -213,39 +221,39 @@ a.nav-link {
 
 #weather-data {
     
-    background-color: blue;
+    background-color: rgb(160, 160, 240);
     /*height: 100%;
     width: 100%; */   
 }
 
 #weather-data-title {
-    background-color: aqua;
+    background-color: rgb(179, 241, 241);
 }
 
 #latitute {
-    background-color: rgb(44, 107, 107);
+    background-color: rgb(159, 238, 238);
 }
 #longitude {
-    background-color: rgb(175, 98, 34);
+    background-color: rgb(236, 199, 168);
 }
 #enter-manually-title {
-    background-color: rgb(72, 32, 124);
+    background-color: rgb(194, 161, 238);
 }
 #manual-latitute {
-    background-color: rgb(50, 95, 95);
+    background-color: rgb(177, 238, 238);
 }
 #manual-longitude {
-    background-color: rgb(131, 151, 57);
+    background-color: rgb(231, 243, 188);
 }
 #results-title {
-    background-color: aqua;
+    background-color: rgb(182, 229, 229);
 }
 #results {
-    background-color: rgb(141, 161, 26);
+    background-color: rgb(223, 231, 175);
 }
 
 #weather-extra-info {
-    background-color: royalblue;
+    background-color: rgb(158, 173, 216);
     height: 250px;
 }
 
