--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 
     
 </head>
-<body>
+<body id="body">
     <!-- Header -->
     <header>
         <div id="header" class="container-fluid fixed-top">
@@ -38,10 +38,10 @@
                 </div>
                 <div id="header-menu" class="col-4 order-last order-sm-0 col-sm-6 col-md-8 col-lg-8">
                     <!-- Bootstrap Navbar
-                    Copied from https://getbootstrap.com/docs/4.0/components/navbar/
-                    July 8th, 2021, at 00:35, and December 7th, 2021, 04:00 Menu content modified. -->
+                    Copied and modified from https://getbootstrap.com/docs/4.0/components/navbar/
+                    July 8th, 2021, at 00:35, and December 7th, 2021, 04:00. Menu content modified. -->
                     <nav class="navbar navbar-expand-sm navbar-light">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                        <button id="hamburger-button" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
@@ -199,9 +199,22 @@
             //});
     </script>
 
-     <!-- This website scripts -->
+    <!-- This website scripts -->
+
+ 
+    
+    <script src="{{ url_for('static', filename='js/move-content-hamburger.js') }}"></script>   
+     
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/weather.js') }}"></script>
+
+
+    {% block scripts %}
+    {% endblock %}
+    
+
+    
+    
+    
     
     
 </body>
