Move index.js script tag from base.html to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,3 +76,7 @@
     </div>
     <!-- /.Instructions -->    
 {% endblock %}
+
+{% block scripts %}
+<script src="{{ url_for('static', filename='js/index.js') }}"></script>
+{% endblock %}
