--- a/pp4_ci_wqcs/templates/pp4_ci_wqcs/index.html
+++ b/pp4_ci_wqcs/templates/pp4_ci_wqcs/index.html
@@ -1,4 +1,9 @@
-               <p>
+ 
+{% extends "base.html" %}
+{% block content %}
+ 
+ <p>
                         Instructions here asdfasdfdfasdflaksj as sdkfjsldkfjlasdkfd
                     </p>
                 
+{% endblock %}
