--- a/pp4_ci_wqcs/templates/pp4_ci_wqcs/weather.html
+++ b/pp4_ci_wqcs/templates/pp4_ci_wqcs/weather.html
@@ -70,5 +70,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{{ url_for('static', filename='js/weather.js') }}"></script>
+<script src="____static/js/weather.js"></script>
 {% endblock %}
