--- a/templates/index.html
+++ b/templates/index.html
@@ -78,5 +78,5 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="{{ url_for('static', filename='js/index.js') }}"></script>
+<script src="static/js/index.js"></script>
 {% endblock %}
