Work on blog page

--- a/templates/_index.html
+++ b/templates/_index.html
@@ -1,3 +1,8 @@
+<!--
+Code copied from Code Institute "I Think Therefore I Blog" project,
+# index.html file, on December 20th, 2022 at 18:58
+-->
+
 {% extends "base.html" %}
 {% block content %}
     <!-- Instructions -->
