--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://js.arcgis.com/3.18/esri/css/esri.css">   
 
     <!-- This project's CSS file -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">   
+    <link rel="stylesheet" href="static/css/style.css">   
 
     
 </head>
@@ -45,16 +45,16 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{{ url_for('index') }}">Instructions</a>
+                                    <a class="nav-link" href="templates/index.html">Instructions</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{{ url_for('weather') }}">Weather</a>
+                                    <a class="nav-link" href="templates/weather.html">Weather</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{{ url_for('blog') }}">Blog</a>
+                                    <a class="nav-link" href="templates/blog.html">Blog</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
+                                    <a class="nav-link" href="templates/contact.html">Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -105,6 +105,7 @@
 
     <!-- Main Content -->
     {% block content %}
+    <!-- Content -->
     {% endblock %}
     <!-- /.Main Content -->
 
@@ -200,7 +201,7 @@
     </script>
 
     <!-- This website scripts -->    
-    <script src="{{ url_for('static', filename='js/move-content-hamburger.js') }}"></script>      
+    <script src="static/js/move-content-hamburger.js"></script>      
 
 
     {% block scripts %}
