Add first view of posts

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -289,6 +289,12 @@ get-weather-data {
     height: 250px;
 }
 
+/* ********* */
+/* BLOG PAGE */
+/* ********* */
+#post-box {
+    margin-top: 75px;
+}
 
 
 /* ************* */
