--- a/templates/blog.html
+++ b/templates/blog.html
@@ -15,7 +15,7 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
             <div class="row">
                 {% for post in post_list %}
                 <div class="col-md-4">
-                    <div class="card mb-4">
+                    <div id="post-box" class="card mb-4">
                         <div class="card-body">
                             <div class="image-container">
                                 {% if "placeholder" in post.featured_image.url %}
