Add post_detail page view

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://js.arcgis.com/3.18/esri/css/esri.css">   
 
     <!-- This project's CSS file -->
-    <link rel="stylesheet" href="static/css/style.css">   
+    <link rel="stylesheet" href="/static/css/style.css">   
 
     
 </head>
@@ -51,7 +51,7 @@
                                     <a class="nav-link" href="templates/weather.html">Weather</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="templates/blog.html">Blog</a>
+                                    <a class="nav-link" href="/blog/">Blog</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="templates/contact.html">Contact</a>
