--- a/templates/base.html
+++ b/templates/base.html
@@ -45,16 +45,16 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="templates/index.html">Instructions</a>
+                                    <a class="nav-link" href="/">Instructions</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="templates/weather.html">Weather</a>
+                                    <a class="nav-link" href="weather/">Weather</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/blog/">Blog</a>
+                                    <a class="nav-link" href="blog/">Blog</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="templates/contact.html">Contact</a>
+                                    <a class="nav-link" href="contact/">Contact</a>
                                 </li>
                             </ul>
                         </div>
