--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div class="contact-form-container">
+    <div class="row">
+        <div id="contact-form-details" class="col-12 col-sm-6">
+            <p>sdfasdfsdaf</p>
+        </div>
+        <div id="contact-form-text" class="col-12 col-sm-6">
+            <p>sdfasdfsdaf</p>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
