--- a/templates/weather.html
+++ b/templates/weather.html
@@ -70,5 +70,7 @@
 {% endblock %}
 
 {% block scripts %}
-<script src="static/js/weather.js"></script>
+<script src="/static/js/weather.js"></script>
 {% endblock %}
+
+
