--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,15 +1,44 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="contact-form-container">
-    <div class="row">
-        <div id="contact-form-details" class="col-12 col-sm-6">
-            <p>sdfasdfsdaf</p>
-        </div>
-        <div id="contact-form-text" class="col-12 col-sm-6">
-            <p>sdfasdfsdaf</p>
+<form id="contact-form" onsubmit="return sendMail(this);>
+    <div id="contact-form-container">
+        <div class="row">
+            <div id="contact-form-details" class="col-12 col-sm-6">
+                <div class="form-row-label">
+                    <label for="name-field">Name</label>
+                </div>
+                <div class="form-row-input">
+                    <input id="name-field" class="input-field" type="text" name="name" placeholder="Your name" required>
+                </div>
+                <div class="form-row-label">
+                    <label for="surname-field">Surname</label>
+                </div>
+                <div class="form-row-input">
+                    <input id="surname-field" class="input-field" type="text" name="surname" placeholder="Your surname" required>
+                </div>
+                <div class="form-row-label">
+                    <label for="email-field">E-mail</label>
+                </div>
+                <div class="form-row-input">
+                    <input id="email-field" class="input-field" type="email" name="email" placeholder="Your e-mail" required>
+                </div>
+            </div>
+            <div id="contact-form-text" class="col-12 col-sm-6">
+                <div class="form-row-label">
+                    <label for="form-description">Description</label>
+                </div>
+                <div id="text-area">
+                    <textarea id="form-description" class="input-field" rows="6" cols="20"  name="description" placeholder="Describe your consultation" required></textarea>
+                </div>
+                <input id="form-send-button" type="submit" value="Send">
+                <!-- E-mail sent status message (empty, modified by JavaScript) -->
+                <div id="email-status">
+                </div>
+            </div>
         </div>
     </div>
-</div>
+</form>
 
 {% endblock %}
+
