--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,9 +1,13 @@
 <!--
 Code copied from Code Institute "I Think Therefore I Blog" project
-on December 20th, 2022
+on December 20th, 2021; later modified on December23rd, 2021 at 15:20.
 -->
 
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+
+{% load crispy_forms_tags %}
+
+{% block content %}
 
 <div class="masthead">
     <div class="container">
@@ -82,6 +86,22 @@ on December 20th, 2022
         <div class="col-md-4 card mb-4  mt-3 ">
             <div class="card-body">
                 <!-- For later -->
+                {% if commented %}
+                <div class="alert alert-success" role="alert">
+                    Your comment is awaiting approval
+                </div>
+                {% else %}
+                {% if user.is_authenticated %}
+
+                <h3>Leave a comment:</h3>
+                <p>Posting as: {{ user.username }}</p>
+                <form method="post" style="margin-top: 1.3em;">
+                    {{ comment_form | crispy }}
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-signup btn-lg">Submit</button>
+                </form>
+                {% endif %}
+                {% endif %}
             </div>
         </div>
     </div>
