Add EmailJS service to contact page

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -42,3 +42,17 @@
 
 {% endblock %}
 
+
+{% block scripts %}
+
+    <!-- Credit: EmailJS
+    Code copied and modified on July 31st, 2021, at 6:37, from EmailJS personal account. 
+    Second line in contact.js file, sendMail() function -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
+    <script src="/static/js/contact.js"></script>
+    
+{% endblock %}
+
+
+
