--- a/templates/base.html
+++ b/templates/base.html
@@ -30,13 +30,13 @@
     <header>
         <div id="header" class="container-fluid fixed-top">
             <div class="row">                                
-                <div id="company-logo" class="col-4 col-sm-3 col-md-2 col-lg-2">
+                <div id="company-logo" class="col-6 col-sm-2 col-md-2 col-lg-2">
                     <!-- Icon for website logo (wind):
                     Credit: Font Awesome
                     Downloaded on December 7th, 2021, 09:15, from https://fontawesome.com/v5.15/icons/wind?style=solid -->
                     <a class="navbar-brand" href="/"><i class="fas fa-wind"></i> WQCS</a>
                 </div>
-                <div id="header-menu" class="col-4 order-last order-sm-0 col-sm-6 col-md-8 col-lg-8">
+                <div id="header-menu" class="col-6  col-sm-7 col-md-6 col-lg-5">
                     <!-- Bootstrap Navbar
                     Copied and modified from https://getbootstrap.com/docs/4.0/components/navbar/
                     July 8th, 2021, at 00:35, and December 7th, 2021, 04:00. Menu content modified. -->
@@ -60,7 +60,7 @@
                         </div>
                     </nav>
                 </div> 
-                <div id="log-in-button" class="col-4 col-sm-3 col-md-2 col-lg-2 ">
+                <div id="log-in-button" class="col-12 col-sm-3 col-md-4 col-lg-5 " style="background-color: rgb(154, 165, 165);">
                     <!-- Button trigger modal:
                     Credit: Bootstrap
                     Code copied on December 7th, 2021, 08:34 from https://getbootstrap.com/docs/4.0/components/modal/
@@ -75,12 +75,22 @@
                         Log Out
                     </button>
                     {% else %}
-                    <button type="button" class="btn btn-primary" onclick="window.location.href='{% url 'account_login' %}';">
-                        Log In
-                    </button>              
-                    <button type="submit" class="btn btn-primary" onclick="window.location.href='{% url 'account_signup' %}';">
-                        Sign Up
-                    </button>
+                    
+                    <div class="row"> 
+                            <div id="log-in-button" class="col-6 col-sm-6 col-md-6 col-lg-6 ">
+                                <button type="button" class="btn btn-primary" onclick="window.location.href='{% url 'account_login' %}';">
+                                    Log In
+                                </button> 
+                            </div>
+                        
+                        
+                            <div id="log-in-button" class="col-6 col-sm-6 col-md-6 col-lg-6 ">             
+                                <button type="submit" class="btn btn-primary" onclick="window.location.href='{% url 'account_signup' %}';">
+                                    Sign Up
+                                </button>
+                            </div>
+                        
+                        </div>
                     {% endif %}
 
                     <!-- 
