--- a/templates/weather.html
+++ b/templates/weather.html
@@ -33,26 +33,30 @@
                     </div>
                     <div id="results-title" class="col-12"><p>Weather Data</p></div>
                     <!-- Weather Data -->
-                    <div id="wind" class="col-12 col-sm-6 col-md-3"><p>data</p></div>                                       
-                    <div id="wind-label" class="col-12 col-sm-6 col-md-3"><p>data a</p></div>
-                    <div id="b" class="col-12 col-sm-6 col-md-3"><p>data b</p></div>
-                    <div id="c" class="col-12 col-sm-6 col-md-3"><p>data c</div>
-                    <div id="d" class="col-12 col-sm-6 col-md-3"><p>data d</p></div>
-                    <div id="e" class="col-12 col-sm-6 col-md-3"><p>data e</p></div>
-                    <div id="f" class="col-12 col-sm-6 col-md-3"><p>data f</p></div>
-                    <div id="g" class="col-12 col-sm-6 col-md-3"><p>data g</p></div>
-                    <div id="h" class="col-12 col-sm-6 col-md-3"><p>data h</p></div>
-                    <div id="i" class="col-12 col-sm-6 col-md-3"><p>data i</p></div>
-                    <div id="j" class="col-12 col-sm-6 col-md-3"><p>data j</p></div>
-                    <div id="k" class="col-12 col-sm-6 col-md-3"><p>data k</p></div>
-                    <div id="l" class="col-12 col-sm-6 col-md-3"><p>data l</p></div>
-                    <div id="ll" class="col-12 col-sm-6 col-md-3"><p>data ll</p></div>
-                    <div id="m" class="col-12 col-sm-6 col-md-3"><p>data m</p></div>
-                    <div id="n" class="col-12 col-sm-6 col-md-3"><p>data n</p></div>
-                    <div id="ñh" class="col-12 col-sm-6 col-md-3"><p>data ñ</p></div>
-                    <div id="o" class="col-12 col-sm-6 col-md-3"><p>data o</p></div>
+                    <div id="wind" class="col-12 col-sm-6 col-md-3"><p>Wind Speed</p></div>                                       
+                    <div id="wind-label" class="col-12 col-sm-6 col-md-3"><p>(wind speed)</p></div>
+                    <div id="b" class="col-12 col-sm-6 col-md-3"><p>Direction</p></div>
+                    <div id="c" class="col-12 col-sm-6 col-md-3"><p>(direction)</div>
+                    <div id="d" class="col-12 col-sm-6 col-md-3"><p>Temperature</p></div>
+                    <div id="e" class="col-12 col-sm-6 col-md-3"><p>(temperature)</p></div>
+                    <div id="f" class="col-12 col-sm-6 col-md-3"><p>Feels Like</p></div>
+                    <div id="g" class="col-12 col-sm-6 col-md-3"><p>(feels like)</p></div>
+                    <div id="h" class="col-12 col-sm-6 col-md-3"><p>Pressure</p></div>
+                    <div id="i" class="col-12 col-sm-6 col-md-3"><p>(pressure)</p></div>
+                    <div id="j" class="col-12 col-sm-6 col-md-3"><p>Humidity</p></div>
+                    <div id="k" class="col-12 col-sm-6 col-md-3"><p>(humidity)</p></div>
+                    <div id="l" class="col-12 col-sm-6 col-md-3"><p>Visibitily</p></div>
+                    <div id="ll" class="col-12 col-sm-6 col-md-3"><p>(visibility)</p></div>
+                    <div id="m" class="col-12 col-sm-6 col-md-3"><p>Sky</p></div>
+                    <div id="n" class="col-12 col-sm-6 col-md-3"><p>(clouds)</p></div>
+                    <div id="ñh" class="col-12 col-sm-6 col-md-3"><p>Main</p></div>
+                    <div id="o" class="col-12 col-sm-6 col-md-3"><p>(data.weather[0].main)</p></div>
                     <div id="p" class="col-12 col-sm-6 col-md-3"><p>data p</p></div>
-                    <div id="q" class="col-12 col-sm-6 col-md-3"><p>data q</p></div>
+                    <div id="q" class="col-12 col-sm-6 col-md-3"><p>(data.weather[0].description)</p></div>
+                    <div id="ñh" class="col-12 col-sm-6 col-md-3"><p>Sunrise</p></div>
+                    <div id="o" class="col-12 col-sm-6 col-md-3"><p>data.sys.sunrise</p></div>
+                    <div id="p" class="col-12 col-sm-6 col-md-3"><p>Sunset</p></div>
+                    <div id="q" class="col-12 col-sm-6 col-md-3"><p>data.sys.sunset</p></div>
                     <!-- /.Weather Data -->
                 </div>
             </div>       
