Add send button for weather data

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -57,6 +57,9 @@
                     <div id="o" class="col-12 col-sm-6 col-md-3"><p>data.sys.sunrise</p></div>
                     <div id="p" class="col-12 col-sm-6 col-md-3"><p>Sunset</p></div>
                     <div id="q" class="col-12 col-sm-6 col-md-3"><p>data.sys.sunset</p></div>
+                    <div id="send-weather-data" class="col-12">
+                        <button id="send-weather-data-button" type="submit">Send Data</button>
+                    </div>
                     <!-- /.Weather Data -->
                 </div>
             </div>       
